# Blue-Helper

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/AzureHelperDjango/app/: urls.py  utils.py  views.py
src/AzureHelperDjango/app/templates/app/: chat.html  home.html
src/AzureHelperDjango/config/: settings.py  urls.py
src/AzureHelperDjango/static/css/: style.css
src/AzureHelperDjango/static/data/: doc_links.csv
src/AzureHelperDjango/static/js/: clouds.js
src/AzureHelperDjango/staticfiles/data/: doc_links.csv
src/AzureHelperDjango/staticfiles/js/: clouds.js
src/AzureHelperDjango/templates/: base.html
src/AzureHelperDjango/templates/includes/: footer.html  header.html
src/FastApiApp/: LICENSE  README.md
src/FastApiApp/app/: main.py
src/FastApiApp/app/api/v1/endpoints/: auth.py  azurehelper.py  users.py
src/FastApiApp/app/core/: config.py  security.py
src/FastApiApp/app/db/: db_utils.py
src/FastApiApp/app/models/: user.py
src/FastApiApp/app/schemas/: auth.py  query.py
src/FastApiApp/app/utils/: clean.py  jwt_handler.py  loader.py  model.py  search.py
src/azurq_a/: scrapy.cfg
src/azurq_a/azurq_a/: items.py  middlewares.py  pipelines.py  settings.py
src/azurq_a/azurq_a/spiders/: azurespider.py
src/scripts/: test_training.py
src/training/: training.py
src/utils/: convert_to_squad.py
