[project]
name = "blue-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludivine",email = "ludivine.raby@gmail.com"},
    {name = "Samuel Thorez-Debrucq", email= "nono@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "fastapi (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

lint.select = [
   "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "C90",  # complexity (McCabe)
]

lint.ignore = [
  "E203",  # whitespace before ':'
]

exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
]