[project]
name = "blue-helper"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "ludivine",email = "ludivine.raby@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scrapy (>=2.13.2,<3.0.0)",
    "scrapy-user-agents (>=0.1.1,<0.2.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
